# Agentic-Clinical-Control-Tower-

./: README.md
backend/: .env  README.md  pyproject.toml  schema.sql  verify_part8.ps1
backend/app/: __init__.py  main.py  models.py
backend/app/agents/: monitor_agent.py  orchestrator.py
backend/app/api/: __init__.py  agents.py  communication.py  evaluation.py  forecasts.py  ml.py  nlp.py  patients.py  rag.py  timeseries.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  agents.py  patient.py
backend/app/services/: __init__.py  evaluation.py  feature_store.py  forecasting_engine.py  genai_communication.py  ml_models.py  mock_data.py  nlp_engine.py  rag_engine.py  simulation_engine.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/agents/: page.tsx
web/src/app/knowledge/: page.tsx
web/src/app/patients/: page.tsx
web/src/components/agents/: action-card.tsx  agent-state-stepper.tsx
web/src/components/dashboard/: alert-feed.tsx  metric-card.tsx  prophet-chart.tsx
web/src/components/layout/: app-sidebar.tsx  page-transition.tsx
web/src/components/patients/: risk-badge.tsx
web/src/lib/: api.ts  data-generators.ts
